2.36: 

    * Rework of the language determination function, most of it now covered in
      the serendipity framework, details in leading comments and comments in
      /include/functions_config.inc.php: serendipity_getSessionLanguage() and
      serendipity_getPostAuthSessionLanguage(), added $serendipity['default_lang']
      for the blogs default language, needs now Serendipity version 2.4 to work
      because of these changes in the core
    * activated and integrated the option to hide untranslated articles
    * changed the footer link to the format id-title for all languages,
      including default
    * The backend display language is now the user language, the dropdown
      entry for 'default' is fixed to the blog default language (has to be).
    * sidebar plugin: changed the POST value to [serendipity][user_language]
      to get it into $serendipity['POST']
    * added event_hook 'multilingual_strip_langs' to strip tagged translation from strings
      i. e. category use outside the sidebar
2.35: assign lang stripped blogTitle in genpage hook (empty search was not covered)
2.34: Added legal gdpr/dsgvo info
2.33: Iconfont a11y fix (yellowled)

2.32: Remove s9y 2.0+ inline style for the fieldset

2.31:

    * Better recognize $serendipity['dbType'] query check for all supported
      postgres and all sqlite versions
    * Set strip_langs() method static

2.30 & 1.15 (sidebar): Fix Invalid argument supplied for foreach() error in
                      case the $serendipity['languages'] array is missing
                      (i.e. by emerge.sh call)

2.29 & 1.14 (sidebar): Fix config sidebar selected langs on save

2.28: Extend RSS blog title and description for lang strip

2.27: Extend blogTitle and description lang strip in the genpage hook (fixes
      the email subject inclusion for example)

2.26:

    * Fix possible missing Smarty object init
    * Add blogDescription tagged translations to 2.25

2.25:
